# rps

./: .gitignore  README.md  pyproject.toml
rock_paper_scissors/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
rock_paper_scissors/migrations/: 0001_initial.py
rps/: settings.py  urls.py
